test/files/neg/t6074.check
t6074.scala:5: error: constructor A in class A cannot be accessed in object T from object T
  def t = new A()
          ^
1 error
